--- a/.github/workflows/deploy-docs-web-frontend-vite.yml
+++ b/.github/workflows/deploy-docs-web-frontend-vite.yml
@@ -1,9 +1,8 @@
-name: Build & Deploy - docs/web-frontend-vite (Vite React)
+name: Deploy to docs/web-frontend-vite
 
 on:
   push:
     branches: [ "main" ]
-    # 배포 커밋으로 인한 무한 루프 방지
     paths-ignore:
       - 'docs/**'
   workflow_dispatch:
@@ -14,58 +13,68 @@ permissions:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
-          cache-dependency-path: web-frontend-vite/package-lock.json
+          cache: npm
+          cache-dependency-path: |
+            service/web-frontend-vite/package-lock.json
 
       - name: Install
-        working-directory: web-frontend-vite
+        working-directory: service/web-frontend-vite
         run: npm ci
 
       - name: Build
-        working-directory: web-frontend-vite
+        working-directory: service/web-frontend-vite
         run: npm run build
 
+      # dist 확인 (문제 추적용)
+      - name: Debug dist
+        run: |
+          ls -la service/web-frontend-vite/dist || true
+          test -f service/web-frontend-vite/dist/index.html
+          find service/web-frontend-vite/dist -maxdepth 2 -type f | head -n 50
+
+      # 배포 대상 폴더 준비 (Pages 루트는 /docs)
       - name: Prepare target folder
         run: |
           mkdir -p docs/web-frontend-vite
-          rm -rf docs/web-frontend-vite/*
 
+      # 소스(dist) → 배포(docs/web-frontend-vite) 복사
       - name: Copy build to docs/web-frontend-vite
-        run: cp -r web-frontend-vite/dist/* docs/web-frontend-vite/
+        run: |
+          rsync -av --delete service/web-frontend-vite/dist/ docs/web-frontend-vite/
 
-      - name: Add .nojekyll (prevent underscore issues)
+      - name: Add .nojekyll
         run: touch docs/.nojekyll
 
-      # ===== (옵션) BrowserRouter 사용할 때만 활성화 =====
-      # - name: Add 404 redirect for SPA (optional)
+      # BrowserRouter일 때만 사용 (HashRouter면 불필요)
+      # - name: Add 404 redirect (optional)
       #   run: |
       #     cat > docs/web-frontend-vite/404.html << 'EOF'
       #     <!doctype html><html><head><meta charset="utf-8">
       #     <meta http-equiv="refresh" content="0;url=/dev_portfolio/web-frontend-vite/">
       #     <script>
       #       (function(){
-      #         var repo = 'dev_portfolio';
-      #         var base = '/' + repo + '/web-frontend-vite/';
+      #         var base='/dev_portfolio/web-frontend-vite/';
       #         var after = location.pathname.split(base)[1] || '';
-      #         var target = base + (after || '');
-      #         location.replace(target + location.search + location.hash);
+      #         location.replace(base + (after||'') + location.search + location.hash);
       #       })();
-      #     </script>
-      #     </head><body></body></html>
+      #     </script></head><body></body></html>
       #     EOF
-      # ===============================================
 
-      - name: Commit & Push to main (docs only)
+      # 복사 결과 검증
+      - name: Debug docs target
+        run: |
+          ls -la docs/web-frontend-vite || true
+          test -f docs/web-frontend-vite/index.html
+          find docs/web-frontend-vite -maxdepth 2 -type f | head -n 50
+
+      - name: Commit & Push (docs only)
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "chore: deploy web-frontend-vite to docs/web-frontend-vite"
+          commit_message: "chore: deploy to docs/web-frontend-vite"
           file_pattern: docs/**
