Modify setting and options for prettier, eslint, eol, etc...

--- a/.github/workflows/ci-play.yml
+++ b/.github/workflows/ci-play.yml
@@ -2,7 +2,7 @@
 name: CI for Play, Labs, Experiments
 on:
   push:
-    branches: [ "main" ]
+    branches: ['main']
     paths:
       - 'labs/**'
       - 'playground/**'
