--- a/.github/workflows/ci-services.yml
+++ b/.github/workflows/ci-services.yml
@@ -2,7 +2,7 @@
 name: CI for Services
 on:
   push:
-    branches: [ "main" ]
+    branches: ['main']
     paths:
       - 'services/**'
   pull_request:
