--- a/.github/workflows/deploy-gh-pages-web-frontend-vite.yml.yml
+++ b/.github/workflows/deploy-gh-pages-web-frontend-vite.yml.yml
@@ -2,7 +2,7 @@ name: Deploy web-frontend-vite to gh-pages
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ['main']
     paths:
       - 'web-frontend-vite/**'
       - '.github/workflows/deploy-gh-pages-web-frontend-vite.yml'
