--- a/.github/workflows/deploy-docs-web-frontend-vite.yml
+++ b/.github/workflows/deploy-docs-web-frontend-vite.yml
@@ -14,7 +14,6 @@ permissions:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
 
@@ -53,10 +52,9 @@ jobs:
       - name: Add .nojekyll
         run: touch docs/.nojekyll
 
-      # ===== (옵션) BrowserRouter 사용할 때만 활성화 =====
+
+      # ===== (옵션) BrowserRouter 사용할 때만 활성화 BrowserRouter일 때만 사용 (HashRouter면 불필요)=====
       # - name: Add 404 redirect for SPA (optional)
-      # BrowserRouter일 때만 사용 (HashRouter면 불필요)
-      # - name: Add 404 redirect (optional)
       #   run: |
       #     cat > docs/web-frontend-vite/404.html << 'EOF'
       #     <!doctype html><html><head><meta charset="utf-8">
