--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "test": "jest --passWithNoTests"
   },
   "devDependencies": {
+    "@eslint/js": "^9.34.0",
     "@typescript-eslint/eslint-plugin": "^8.42.0",
     "@typescript-eslint/parser": "^8.42.0",
     "eslint": "^9.34.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
     "typescript": "^5.9.2"
