--- a/.github/workflows/deploy-docs-web-frontend-vite.yml
+++ b/.github/workflows/deploy-docs-web-frontend-vite.yml
@@ -1,19 +1,17 @@
-name: Build & Deploy - docs/web-frontend-vite (Vite React)
+name: Build Vite into docs subfolder
 
 on:
   push:
-    branches: [ "main" ]
-    # 배포 커밋으로 인한 무한 루프 방지
-    paths-ignore:
-      - 'docs/**'
+    branches: [main]
   workflow_dispatch:
 
-permissions:
-  contents: write
-
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: service/web-frontend-vite
+
     steps:
       - uses: actions/checkout@v4
 
@@ -21,62 +19,27 @@ jobs:
         with:
           node-version: 20
           cache: npm
-          cache-dependency-path: |
-            service/web-frontend-vite/package-lock.json
+          cache-dependency-path: service/web-frontend-vite/package-lock.json
 
       - name: Install
-        working-directory: service/web-frontend-vite
         run: npm ci
 
       - name: Build
-        working-directory: service/web-frontend-vite
         run: npm run build
 
-      # dist 확인 (문제 추적용)
-      - name: Debug dist
+      - name: Publish into docs/web-frontend-vite
         run: |
-          ls -la service/web-frontend-vite/dist || true
-          test -f service/web-frontend-vite/dist/index.html
-          find service/web-frontend-vite/dist -maxdepth 2 -type f | head -n 50
+          mkdir -p ../../docs/web-frontend-vite
+          cp -r dist/* ../../docs/web-frontend-vite/
+          # SPA 라우팅용
+          cp dist/index.html ../../docs/web-frontend-vite/404.html
+          # Jekyll 처리 비활성화 (언더스코어/폴더 무시 방지)
+          touch ../../docs/.nojekyll
 
-      # 배포 대상 폴더 준비 (Pages 루트는 /docs)
-      - name: Prepare target folder
+      - name: Commit docs
         run: |
-          mkdir -p docs/web-frontend-vite
-
-      # 소스(dist) → 배포(docs/web-frontend-vite) 복사
-      - name: Copy build to docs/web-frontend-vite
-        run: |
-          rsync -av --delete service/web-frontend-vite/dist/ docs/web-frontend-vite/
-
-      - name: Add .nojekyll
-        run: touch docs/.nojekyll
-
-
-      # ===== (옵션) BrowserRouter 사용할 때만 활성화 BrowserRouter일 때만 사용 (HashRouter면 불필요)=====
-      # - name: Add 404 redirect for SPA (optional)
-      #   run: |
-      #     cat > docs/web-frontend-vite/404.html << 'EOF'
-      #     <!doctype html><html><head><meta charset="utf-8">
-      #     <meta http-equiv="refresh" content="0;url=/dev_portfolio/web-frontend-vite/">
-      #     <script>
-      #       (function(){
-      #         var base='/dev_portfolio/web-frontend-vite/';
-      #         var after = location.pathname.split(base)[1] || '';
-      #         location.replace(base + (after||'') + location.search + location.hash);
-      #       })();
-      #     </script></head><body></body></html>
-      #     EOF
-
-      # 복사 결과 검증
-      - name: Debug docs target
-        run: |
-          ls -la docs/web-frontend-vite || true
-          test -f docs/web-frontend-vite/index.html
-          find docs/web-frontend-vite -maxdepth 2 -type f | head -n 50
-
-      - name: Commit & Push (docs only)
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: "chore: deploy to docs/web-frontend-vite"
-          file_pattern: docs/**
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add ../../docs
+          git commit -m "chore: deploy web-frontend-vite into docs subfolder" || echo "no changes"
+          git push
