--- a/.github/workflows/deploy-docs-web-frontend-vite.yml
+++ b/.github/workflows/deploy-docs-web-frontend-vite.yml
@@ -10,16 +10,31 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: service/web-frontend-vite
+
+        working-directory: service/web-frontend-vite # ★ 하위 프로젝트 루트
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Setup Node (use built-in cache)
+        uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
+
+          # ★ lock 파일의 "정확한" 경로 (repo-root 기준 절대/상대 모두 가능)
           cache-dependency-path: service/web-frontend-vite/package-lock.json
+
+      # (디버그) 경로/파일 확인 — 문제 생기면 펼쳐보세요
+      - name: Debug paths
+        run: |
+          pwd
+          ls -al
+          ls -al ..
+          ls -al ../../
+          test -f package.json && echo found package.json
+          test -f package-lock.json && echo found package-lock.json || true
 
       - name: Install
         run: npm ci
