--- a/.github/workflows/deploy-docs-web-frontend-vite.yml
+++ b/.github/workflows/deploy-docs-web-frontend-vite.yml
@@ -48,6 +48,8 @@ jobs:
 
       - name: Build
         run: npm run build
+        env:
+          ROLLUP_SKIP_NODEJS_NATIVE: '1'
 
       - name: SPA fallback (optional)
         run: cp dist/index.html dist/404.html || true
