Update Github Pages Actions

--- a/.github/workflows/deploy-docs-web-frontend-vite.yml
+++ b/.github/workflows/deploy-docs-web-frontend-vite.yml
@@ -3,69 +3,45 @@ name: Build and Deploy (Vite) into GitHub Pages docs subfolder (services/web-fro
 on:
   push:
     branches: [main]
+  workflow_dispatch:
 
 permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: 'pages'
-  cancel-in-progress: true
+  contents: write # docs 폴더에 커밋/푸시 필요
 
 jobs:
-  build:
+  build-and-publish:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: services/web-frontend-vite # ★ 하위 프로젝트 루트
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node.js with cache (use built-in cache)
+      - name: Setup Node (cache by ROOT lock)
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
+          cache-dependency-path: package-lock.json # 루트 lock
 
-          # ★ lock 파일의 "정확한" 경로 (repo-root 기준 절대/상대 모두 가능)
-          cache-dependency-path: services/web-frontend-vite/package-lock.json
-
-      # 경로 확인(문제 시 로그로 즉시 파악)
-      - name: Debug paths
-        run: |
-          pwd
-          ls -al
-          ls -al ..
-          ls -al ../../
-          test -f package.json && echo "✅ package.json OK"
-          test -f package-lock.json && echo "✅ package-lock.json OK" || echo "❌ lock missing"
-
-      - name: Install deps (from lock)
+      - name: Install (root)
         run: npm ci
 
-      - name: Build
-        run: npm run build
-        env:
-          ROLLUP_SKIP_NODEJS_NATIVE: '1'
+      - name: Build workspace (services/web-frontend-vite)
+        run: npm run build -w ./services/web-frontend-vite
 
-      - name: SPA fallback (optional)
-        run: cp dist/index.html dist/404.html || true
+      - name: Prepare docs/web-frontend-vite
+        run: |
+          mkdir -p docs/web-frontend-vite
+          # 기존 산출물만 정리 (다른 docs 콘텐츠는 건드리지 않음)
+          rm -rf docs/web-frontend-vite/*
+          cp -r services/web-frontend-vite/dist/* docs/web-frontend-vite/
+          # SPA 라우팅(fallback). HashRouter면 생략 가능
+          cp docs/web-frontend-vite/index.html docs/web-frontend-vite/404.html || true
 
-      - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: services/web-frontend-vite/dist
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+      - name: Commit & push changes to docs/
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add docs/web-frontend-vite
+          git diff --cached --quiet && echo "No changes to commit" || git commit -m "chore: publish Vite build to docs/web-frontend-vite"
+          git push
