--- a/.github/workflows/deploy-docs-web-frontend-vite.yml
+++ b/.github/workflows/deploy-docs-web-frontend-vite.yml
@@ -6,16 +6,10 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: pages
-  cancel-in-progress: true
+  contents: write # docs 폴더에 커밋/푸시 필요
 
 jobs:
-  build:
+  build-and-publish:
     runs-on: ubuntu-latest
 
     steps:
@@ -27,33 +21,27 @@ jobs:
         with:
           node-version: 20
           cache: npm
-          cache-dependency-path: package-lock.json # ★ 루트 잠금파일
-
-      # (디버그) lock 존재 확인
-      - name: Debug lock path
-        run: ls -al package-lock.json
+          cache-dependency-path: package-lock.json # 루트 lock
 
       - name: Install (root)
         run: npm ci
 
-      - name: Build workspace
+      - name: Build workspace (services/web-frontend-vite)
         run: npm run build -w ./services/web-frontend-vite
 
-      - name: SPA fallback (optional)
-        run: cp services/web-frontend-vite/dist/index.html services/web-frontend-vite/dist/404.html || true
+      - name: Prepare docs/web-frontend-vite
+        run: |
+          mkdir -p docs/web-frontend-vite
+          # 기존 산출물만 정리 (다른 docs 콘텐츠는 건드리지 않음)
+          rm -rf docs/web-frontend-vite/*
+          cp -r services/web-frontend-vite/dist/* docs/web-frontend-vite/
+          # SPA 라우팅(fallback). HashRouter면 생략 가능
+          cp docs/web-frontend-vite/index.html docs/web-frontend-vite/404.html || true
 
-      - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: services/web-frontend-vite/dist
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+      - name: Commit & push changes to docs/
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add docs/web-frontend-vite
+          git diff --cached --quiet && echo "No changes to commit" || git commit -m "chore: publish Vite build to docs/web-frontend-vite"
+          git push
