--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test": "jest --passWithNoTests",
     "ws:start:rn-expo-webview": "npm run -w services/rn-expo-webview start",
     "ws:lint:rn-expo-webview": "npm run -w services/rn-expo-webview lint",
-    "ws:fix:rn-expo-webview": "npm run -w services/rn-expo-webview lint -- --fix"
+    "ws:fix:rn-expo-webview": "npm run -w services/rn-expo-webview lint -- --fix",
+    "ws:dev:rnwebview": "npm run -w services/rn-expo-webview dev"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
