--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,71 @@ build
 .expo
 .expo-shared
 .DS_Store
+
+## Python
+# -------------------------
+# Python
+# -------------------------
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*$py.class
+
+# 가상환경
+.venv/
+env/
+venv/
+
+# 패키지 빌드 결과물
+build/
+dist/
+*.egg-info/
+.eggs/
+
+# 로컬 DB, 캐시, 로그
+*.db
+*.sqlite3
+*.log
+*.coverage
+.coverage.*
+.pytest_cache/
+.cache/
+
+# -------------------------
+# 환경 파일
+# -------------------------
+.env
+.env.*
+!*.example   # 예시 파일은 버전 관리에 포함
+
+# -------------------------
+# IDE / Editor
+# -------------------------
+.vscode/
+.idea/
+*.swp
+.DS_Store
+Thumbs.db
+
+# -------------------------
+# Test / Reports
+# -------------------------
+htmlcov/
+coverage.xml
+pytestdebug.log
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-error.log*
+.pnpm-store/
+
+# Python
+**/.venv/
+**/__pycache__/
+**/*.pyc
+
+# OS
+.DS_Store
+Thumbs.db
