--- a/services-backend/express-musics/package.json
+++ b/services-backend/express-musics/package.json
@@ -14,10 +14,12 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "morgan": "^1.10.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/morgan": "^1.9.10",
     "@typescript-eslint/eslint-plugin": "^8.42.0",
