--- a/services/rn-expo-webview/package.json
+++ b/services/rn-expo-webview/package.json
@@ -1,11 +1,11 @@
 {
   "name": "rn-expo-webview",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "dev": "expo start -c",
     "dev:android": "expo start --android",
@@ -18,6 +18,7 @@
     "fix": "eslint . --ext .ts,.tsx --fix"
   },
   "dependencies": {
+    "eas-cli": "^16.18.0",
     "expo": "~53.0.22",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
