--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,121 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Custom additions for dotnet-server
+## Build artifacts
+bin/
+obj/
+out/
+TestResults/
+
+## User-specific / OS
+*.user
+*.suo
+.DS_Store
+Thumbs.db
+
+## NuGet
+*.nupkg
+.nuget/
+packages/
+project.lock.json
+
+## Logs / temp
+*.log
+*.tmp
+
+## VS Code (원하면 예외 파일만 허용)
+.vscode/
+
+## Local-only (개인/머신 전용)
+.local/
+
+## DB
+*.db
+
+## EF Core 마이그레이션
+Migrations/
+
+## ASP.NET Core configuration files
+appsettings.json
+appsettings.*.json
+!appsettings.example.json
+
+## JetBrains Rider
+.idea/
+*.iml
+node_modules
+dist
+build
+.expo
+.expo-shared
+.DS_Store
+
+## Python
+# -------------------------
+# Python
+# -------------------------
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*$py.class
+
+# 가상환경
+.venv/
+env/
+venv/
+
+# 패키지 빌드 결과물
+build/
+dist/
+*.egg-info/
+.eggs/
+
+# 로컬 DB, 캐시, 로그
+*.db
+*.sqlite3
+*.log
+*.coverage
+.coverage.*
+.pytest_cache/
+.cache/
+
+# -------------------------
+# 환경 파일
+# -------------------------
+.env
+.env.*
+!*.example   # 예시 파일은 버전 관리에 포함
+
+# -------------------------
+# IDE / Editor
+# -------------------------
+.vscode/
+.idea/
+*.swp
+.DS_Store
+Thumbs.db
+
+# -------------------------
+# Test / Reports
+# -------------------------
+htmlcov/
+coverage.xml
+pytestdebug.log
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-error.log*
+.pnpm-store/
+
+# Python
+**/.venv/
+**/__pycache__/
+**/*.pyc
+
+# OS
+.DS_Store
+Thumbs.db
